tests/rosetta/out/Smalltalk/boolean-values.out
true
bool
false
x == y: false
x < y: true

Convert String into Boolean Data type

Before : string
Object: nil error: did not understand #value:
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
UndefinedObject(Object)>>doesNotUnderstand: #value: (SysExcept.st:1448)
optimized [] in UndefinedObject>>executeStatements (/tmp/boolean-values.st:4)
optimized [] in UndefinedObject>>executeStatements (/tmp/boolean-values.st:23)
UndefinedObject>>executeStatements (/tmp/boolean-values.st:25)
