tests/rosetta/out/Smalltalk/boolean-values.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| parseBool l main n x y str1 bolStr |
parseBool := [:s | l := lower value: s.
((((((((((l = '1')) or: [((l = 't'))])) or: [((l = true))])) or: [((l = 'yes'))])) or: [((l = 'y'))])) ifTrue: [
true.
] .
false. ].
main := [ n := true.
Transcript show: (n) printString; cr.
Transcript show: 'bool'; cr.
n := n not.
Transcript show: (n) printString; cr.
x := 5.
y := 8.
Transcript show: 'x == y:'; show: ' '; show: ((x = y)) printString; cr.
Transcript show: 'x < y:'; show: ' '; show: ((x < y)) printString; cr.
Transcript show: '
Convert String into Boolean Data type
'; cr.
str1 := 'japan'.
Transcript show: 'Before :'; show: ' '; show: 'string'; cr.
bolStr := parseBool value: str1.
Transcript show: 'After :'; show: ' '; show: 'bool'; cr. ].
main value.
